# finnit

./: Cargo.toml  README.md  design.md  rust-toolchain.toml
abi/: Cargo.toml
abi/src/: lib.rs
backend/: Cargo.toml  README.md
backend/src/: lib.rs
frontend/: Cargo.toml  README.md
frontend/src/: input_events.rs  lib.rs  timer.rs  traits.rs
frontend/src/models/: mod.rs
frontend/src/views/: budget.rs  enums.rs  grouping.rs  home.rs  mod.rs  transaction.rs
frontend/src/views/common/: footer.rs  header.rs  help.rs  mod.rs
src/: main.rs
