[package]
name = "finnit_abi"
version = "0.1.0"
description = "ABI for finnit"
categories = ["finance"]
keywords = ["personal finance"]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tz-rs = { version = "0.7" }
