[package]
name = "finnit_frontend"
version = "0.1.0"
description = "Backend for finnit"
categories = ["finance"]
keywords = ["personal finance"]
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
log = { version = "0.4" }
ratatui = { version = "0.28.1" }
crossterm = { version = "0.28.1" }
finnit_backend = { version = "0.1", path = "../backend" }
finnit_abi = { version = "0.1", path = "../abi" }
tz-rs = { version = "0.7" }
